--- a/package.json
+++ b/package.json
@@ -62,12 +62,14 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.13.1",
     "google-auth-library": "^10.2.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "react": "^18.3.1",
@@ -95,6 +97,7 @@
     "@types/express": "4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/node": "20.16.11",
+    "@types/nodemailer": "^7.0.1",
     "@types/passport": "^1.0.16",
     "@types/passport-local": "^1.0.38",
     "@types/react": "^18.3.11",
